--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tippy",
+  "name": "@sanity/react-tippy",
   "version": "1.2.2",
   "description": "React tippy",
   "main": "dist/react-tippy.js",
