--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sanity/react-tippy",
-  "version": "1.2.4",
+  "version": "1.2.3",
   "description": "React tippy",
   "main": "dist/react-tippy.js",
   "author": "Khoa Thai",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tvkhoa/react-tippy.git"
+    "url": "https://github.com/sanity-io/react-tippy.git"
   },
   "bugs": {
     "url": "https://github.com/tvkhoa/react-tippy/issues"
